--- a/src/index.html
+++ b/src/index.html
@@ -5,25 +5,58 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Hello Rigo with Vanilla.js</title>
     <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+      integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3"
+      crossorigin="anonymous"
+    />
+    <link
       rel="stylesheet"
       href="https://use.fontawesome.com/releases/v5.2.0/css/all.css"
       integrity="sha384-hWVjflwFxL6sNzntih27bfxkr27PmbbK/iSvJ+a4+0owXq79v+lsFkW54bOGbiDQ"
       crossorigin="anonymous"
     />
     <link rel="shortcut icon" href="./4geeks.ico" />
+    <link rel="stylesheet" href="style.css" />
   </head>
-  <body>
-    <div class="container-fluid text-center">
-      <h1 class="mt-5">Hello Rigo!</h1>
-      <img src="./rigo-baby.jpg" />
-      <p class="alert alert-warning mt-4">
-        If this text is <b>not</b> centered and <b>yellow</b>, you probably have
-        an error
-      </p>
-      <div class="fixed-bottom p-4">
-        Made with ❤️ by
-        <a href="https://www.4geeksacademy.com">4Geeks Academy</a>
+
+  <body class="bg-primary">
+    <h1
+      class="text-uppercase text-center p-2 text-warning text-decoration-underline"
+    >
+      The Domain Name Generator
+    </h1>
+
+    <div class="container text-center">
+      <div class="text-white fw-bolder  py-3">
+        <p>let pronoun = ['the','our'];</p>
+        <p>let adj = ['great', 'big' ];</p>
+        <p>let noun = ['jogger','racoon'];</p>
+        <p>let extension = ['.com', '.net', '.us', '.iu'];</p>
+        <p>
+          Para obtener todas las combinaciones y formar un dominio con una
+          palabra de cada uno de los grupos de arriba, pulse el botón Obtener
+          Combinaciones.
+        </p>
+      </div>
+      <ul id="lista" class="text-center"></ul>
+      <div class="d-grid gap-2 col-6 mx-auto my-4">
+        <button
+          id="listar"
+          type="button"
+          class="btn btn-success fw-bolder border-3 "
+        >
+          Obtener Combinaciones
+        </button>
+        <button
+          id="cerrar"
+          type="button"
+          class="btn btn-danger fw-bolder border-3 "
+        >
+          Cerrar Lista
+        </button>
       </div>
     </div>
+    <script src="app.js"></script>
   </body>
 </html>
